[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyzmq = "^26.2.0"
pytz = "^2024.2"
pystun3 = "^2.0.0"
dash = "^2.18.1"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.24.1"
fire = "^0.7.0"
blessed = "^1.20.0"
cryptography = "^44.0.0"
autonomi-client = "0.4.0rc3"
notebook = "^7.3.2"
pillow = "^11.1.0"
py-ecc = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
